# pubpypack-harmony-udny-yule

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: workflow-to-create-a-python-package.yml
docs/: conf.py  index.rst
src/imppkg/: harmonic_mean.c  harmonic_mean.pyx  harmony.py
test/: test_harmonic_mean.py  test_harmony.py
